--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
       <div class="header-div-1">
         <div class="navbar">
           <div class="logo-main">
-            <img src="./_img/brand.svg" alt="logo-image-alt-name" width="30px">
+            <img
+              src="./_img/brand.svg"
+              alt="logo-image-alt-name"
+              width="30px"
+            />
             <a href="index.html">Tanishq Properties</a>
           </div>
 
@@ -27,9 +31,21 @@
             </ul>
           </nav>
         </div>
+
+        <div class="header-half">
+          <h1>
+            BUYING, SELLING OR RENTING <br />
+            A PROPERTY IN CITY ?
+          </h1>
+          <p>
+            We are here for you to help you find the best property <br />
+            that you want or sell or rent at the price you want
+          </p>
+          <div class="button">Contact us</div>
+        </div>
       </div>
 
-      <div class="header-div-2">Background Image coming soon</div>
+      <div class="header-div-2"></div>
     </header>
   </body>
 </html>
