--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
             We are here for you to help you find the best property <br />
             that you want or sell or rent at the price you want
           </p>
-          <div class="button">Contact us</div>
+          <!-- <div class="button">Contact us</div> -->
         </div>
+        <button>Contact us</button>
       </div>
 
       <div class="header-div-2"></div>
